--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-reactive-localstorage": "git+https://github.com/HAlex/vue-reactive-localstorage.git",
+    "vue-resize-text": "^0.1.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
