--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-reactive-localstorage": "git+https://github.com/HAlex/vue-reactive-localstorage.git",
     "vue-resize-text": "^0.1.1",
     "vue-router": "^3.2.0",
+    "vue-script2": "^2.1.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
