--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@splidejs/vue-splide": "^0.3.5",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
@@ -16,6 +17,7 @@
     "vue-resize-text": "^0.1.1",
     "vue-router": "^3.2.0",
     "vue-script2": "^2.1.0",
+    "vue-toastification": "^1.7.11",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
